hw6 fix